--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yelpcamp",
+  "name": "mountain-calling",
   "version": "1.0.0",
-  "description": "An application for finding and providing reviews of campgrounds",
+  "description": "An application for finding and providing reviews of ski resorts",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
